test/tests/stages/8_loops/valid/empty_expression.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[12]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  ;
  ;
  }
