test/tests/stages/8_loops/invalid_parse/do_missing_semicolon.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  do
  {
  const int(4)
  ;
  }
  while
  (
  const int(1)
  )
  return
  const int(0)
  ;
  }
